--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="profile">
             <div class="avatar-wrap">
                 <!-- O'zingizning rasm URL'ingizni shu yerga qo'ying -->
-                <img src="./img/profil.jpg" alt="Bahodirbek Qosimov" class="avatar" />
+                <img src="./img/porofil.jpg" alt="Bahodirbek Qosimov" class="avatar" />
             </div>
 
             <div class="profile-info">
